# moon

./: .gitignore  Xlogging.conf  logging.conf  main.py  mypy.ini  pyproject.toml  requirements.txt
db/: db.sql  trade_repo.py
exceptions/: exceptions.py
model/: trade.py
moon/: main.py  mypy.ini  requirements.txt
moon/common/: mail.py  moon_config.py  utils.py
moon/db/: db.py  tradecsv.py  tradedb.py
moon/exceptions/: exceptions.py
moon/model/: assets_wallet.py  pnl.py  pnl_total.py  trade.py  wallet.py
moon/tests/: test_trade.py  test_tradecsv.py  test_tradedb.py
moon/tests/data/: binance-export-trades.csv
moon/ui/: account_widget.py  main_window.py  trade_window.py
src/: __init__.py  main.py
src/conf/: db.sql
src/db/: db.py  db.sql  tradecsv.py  tradedb.py
src/exceptions/: exceptions.py
src/model/: asset_data.py  asset_wallet.py  trade.py  wallet.py
src/tests/: __init__.py  test_asset_data.py  test_trade.py  test_tradecsv.py  test_tradedb.py  test_utils.py  test_wallet.py
src/ui/: main_window.py  trade_window.py  trades_window.py
src/utils/: utils.py
tests/: test_assets_wallet.py  test_pnl.py  test_pnl_total.py  test_trade.py  test_wallet.py
tests/data/: trades1.csv  trades2.csv
tests/data/res1/: assets_wallet.csv  pnl.csv  pnl_total.csv
tests/data/res12/: assets_wallet.csv  pnl.csv  pnl_total.csv
