[tool.poetry]
name = "moon"
version = "0.1.0"
description = ""
authors = ["Patrick Tarnaud <patrick.tarnaud@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
PySide6 = "^6.1.2"
Babel = "^2.9.1"
dateutils = "^0.6.12"
python-binance = "^1.0.16"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "^0.910"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 120